core: resolve inline editing issue with z-index

--- a/packages/core/src/components/Cell/index.css
+++ b/packages/core/src/components/Cell/index.css
@@ -26,6 +26,7 @@
 }
 
 .ory-cell-bring-to-front {
+  z-index: 1;
 }
 
 .ory-cell-resizing-overlay:after {
